--- a/ex7.html
+++ b/ex7.html
@@ -11,7 +11,7 @@
     <script>
         let div = document.createElement('div');
         div.id = 'content';
-        div.innerHTML = '<p>CreateElement example</p>';
+        div.innerHTML = '<p>CreateElement example using with JavaScript</p>';
         document.body.appendChild(div);
         // create a new div and set its attributes
         let div2= document.createElement('div');
