--- a/ex8.html
+++ b/ex8.html
@@ -22,6 +22,9 @@
                 <li>🐠 Fish</li>
                 <li>🐢 Turtle</li>
             </ul>
+
+            <!-- <button id="btn" disabled="disabled">Click Me</button> -->
+
             <script>
                 function createMenuItem(name) {
                     let li = document.createElement("li");
@@ -43,6 +46,9 @@
                 const secondList = document.querySelector("#second-list");
                 // append the everest to the second list
                 secondList.appendChild(rabbit);
+
+                /* const buttonElement = document.querySelector('#btn');
+                buttonElement.removeAttribute('disabled'); */
             </script>
         </body>
     </head>
