--- a/ex1.html
+++ b/ex1.html
@@ -7,6 +7,7 @@
     <h1>JavaScript Plus - DOM</h1>
     <p>getElementById() example</p>
     <p id="message">A paragraph</p>
+    <!-- <p id="message">A paragraph</p> -->
     <script>
       const p = document.getElementById('message');
       console.log(p);
