--- a/ex10.html
+++ b/ex10.html
@@ -14,6 +14,7 @@
     <button id="btnSend">Send</button>
     <a href="https://www.clarusway.com" target="_blank" id="site">Clarusway </a>
     <script>
+
       let btnSend = document.querySelector('#btnSend');
       if (btnSend) {
         btnSend.setAttribute('name', 'send');
@@ -35,9 +36,9 @@
         console.log(disabled);
       }
       // remove attribute
-      /* if (link) {
+      if (link) {
         link.removeAttribute('target');
-      } */
+      }
     </script>
   </body>
 </html>
