--- a/ex8.html
+++ b/ex8.html
@@ -40,14 +40,15 @@
 
                 // get the first list
                 const firstList = document.querySelector("#first-list");
-                // take the first child element
-                const rabbit = firstList.firstElementChild;
+                // take the first child element 
+                const rabbit = firstList.firstElementChild; // <li> Rabbit</li>
                 // get the second list
                 const secondList = document.querySelector("#second-list");
                 // append the everest to the second list
                 secondList.appendChild(rabbit);
 
                 /* const buttonElement = document.querySelector('#btn');
+                // buttonElement.setAttribute('disabled', 'false')
                 buttonElement.removeAttribute('disabled'); */
             </script>
         </body>
