--- a/ex6.html
+++ b/ex6.html
@@ -20,6 +20,7 @@
       <li>About Us</li>
     </ul>
     <script>
+
       /* let note = document.querySelector('.note');
       console.log(note.parentNode);
       console.log('------');
@@ -35,7 +36,7 @@
       } */
 
 
-      /* console.log('to get previous sibling');
+      console.log('to get previous sibling');
       let current = document.querySelector('.current');
       let prevSibling = current.previousElementSibling;
       console.log(prevSibling)
@@ -46,7 +47,7 @@
         prevSibling = prevSibling.previousElementSibling;
       }
       console.log('------');
-      console.log('to get all siblings open ex6a.html'); */
+      console.log('to get all siblings open ex6a.html');
     </script>
   </body>
 </html>
